Add interceptor with connection route and controller, Add business package with Auth base classes
